syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  LedgerState state = 1;
}

message PropagateStateResponse {}

message ProvideStateRequest {}

message ProvideStateResponse {
  LedgerState state = 1;
}

message PropagateOperationRequest {
  Operation operation = 1;
  int64 ledgerSize = 2;
}

message PropagateOperationResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc provideState(ProvideStateRequest) returns (ProvideStateResponse);
  rpc propagateOperation(PropagateOperationRequest) returns (PropagateOperationResponse);
}
